# chzzk-auto-recorder2

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  config.py  debug_hls.py  debug_hls_simple.py  docker-compose.yml  docker-hub-deploy.sh  docker-hub-upload.ps1  env.txt  export-image.sh  filename_test.py  main.py  nas-deploy.sh  pyproject.toml  start_recorder.sh  status_recorder.sh  stop_recorder.sh  test_auto_recorder.py  test_curl_ffmpeg_recorder.py  test_monitor.py  test_recorder.py  test_streamlink_recorder.py  test_ytdlp_recorder.py
docker/: container-status.sh  healthcheck.py  logrotate.conf  supervisord.conf
src/: config.py
src/chzzk_recorder/: __init__.py  auto_recorder.py
src/chzzk_recorder/monitor/: __init__.py  live_monitor.py
src/chzzk_recorder/recorder/: __init__.py  stream_recorder.py
